--- a/dresen_thesis.tex
+++ b/dresen_thesis.tex
@@ -34,6 +34,8 @@
 \tableofcontents
 
 \mainmatter % starts arabic numbering
+
+\subfile{\main/chapters/nanoparticles/nanoparticles}
 \subfile{\main/chapters/monolayers/monolayers}
 % \cleardoublepage
 
@@ -63,6 +65,7 @@
 % \cleardoublepage
 % \subfile{./chapters/beam_times/beam_times}
 
+\subfile{\main/chapters/appendix/appendix}
 \listoffigures
 
 \listoftables
