--- a/config/config.tex
+++ b/config/config.tex
@@ -1,3 +1,4 @@
 \DeclareMathSymbol{,}{\mathord}{letters}{"3B}% german comma as dezimaltrennzeichen 
 % \lehead{\headmark}
 % \rohead{\headmark}
+\newcommand{\thisPath}{.}
