--- a/config/config.tex
+++ b/config/config.tex
@@ -2,3 +2,8 @@
 % \lehead{\headmark}
 % \rohead{\headmark}
 \newcommand{\thisPath}{.}
+
+\tolerance=1
+\emergencystretch=\maxdimen
+\hyphenpenalty=10000
+\hbadness=10000
