Removed hyphen package

--- a/config/packages.tex
+++ b/config/packages.tex
@@ -35,7 +35,7 @@
 \usepackage{caption} % for proper image captions
    \captionsetup{format=hang}
 \usepackage{wrapfig} % for text wrapped images
-%\usepackage[none]{hyphenat} %hyphenation package
+% \usepackage[none]{hyphenat} %hyphenation package, turn off hyphens
 \usepackage[bookmarks,
             raiselinks,
             pageanchor,
