Add placeholders for chapters to come

--- a/dresen_thesis.tex
+++ b/dresen_thesis.tex
@@ -35,35 +35,14 @@
 
 \mainmatter % starts arabic numbering
 
+\subfile{\main/chapters/introduction/introduction}
+\subfile{\main/chapters/theoreticalBackground/theoreticalBackground}
 \subfile{\main/chapters/nanoparticles/nanoparticles}
+\subfile{\main/chapters/looselyPackedNS/looselyPackedNS}
 \subfile{\main/chapters/monolayers/monolayers}
-% \cleardoublepage
-
-% \subfile{./chapters/colloidal_crystal/colloidal_crystal_report}
-
-% \cleardoublepage
-% \subfile{./chapters/monolayer_of_cobaltferr ite_cubes_spheres/monolayer_cobaltferrite}
-
-% \cleardoublepage
-% \subfile{./chapters/two_layers_of_cobaltferrite_nanopraticles/twolayer_cobaltferrite}
-
-% \cleardoublepage
-% \subfile{./chapters/oriented_hematite_spindles/hematite_spindles}
-
-% \cleardoublepage
-% \subfile{./chapters/superball/superball_report}
-
-% \cleardoublepage
-% \subfile{./chapters/mesocrystal_gisans/mesocrystal_gisans}
-
-% \cleardoublepage
-% \subfile{./chapters/software/software_report}
-
-% \cleardoublepage
-% \subfile{./chapters/other_projects/other_projects}
-
-% \cleardoublepage
-% \subfile{./chapters/beam_times/beam_times}
+\subfile{\main/chapters/doublelayers/doublelayers}
+\subfile{\main/chapters/colloidalCrystals/colloidalCrystals}
+\subfile{\main/chapters/summary/summary}
 
 \subfile{\main/chapters/appendix/appendix}
 \listoffigures
