Add two bilbiography entries

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -6,5 +6,24 @@ year = 2006,
 volume = 5,
 pages = {265-270},
 doi = {10.1038/nmat1611},
-url    = "{http://www.google.com}",
+}
+@article{Russier_2001_Calcu,
+author = {V. Russier},
+title = {Calculated magnetic properties of two-dimensional arrays of nanoparticles at vanishing temperature},
+journal = {Journal of Applied Physics},
+year = 2001,
+volume = 89,
+number = 2,
+pages = {1287-1294},
+doi = {10.1063/1.1333034},
+}
+@article{Varon_2013_Dipol,
+author = {M. Varon and M. Beleggia and T. Kasama and R. J. Harrison and R. E. Dunin-Borkowski and V. F. Puntes and C. Frandsen},
+title = {Dipolar Magnetism in Ordered and Disordered Low-Dimensional Nanoparticle Assemblies},
+journal = {Scientific Reports},
+year = 2013,
+volume = 3,
+number = 1234,
+pages = {1-5},
+doi = {10.1038/srep01234},
 }
