--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -9,3 +9,4 @@
 \newcommand{\refsec}[1]{\ensuremath{\mathrm{Sec.}\,\ref{#1}}}
 \newcommand{\reffig}[1]{\ensuremath{\mathrm{Fig.}\,\ref{#1}}}
 \newcommand{\unit}[1]{\mathrm{#1}}
+\newcommand{\etc}{\textit{etc}}
