--- a/config/packages.tex
+++ b/config/packages.tex
@@ -4,9 +4,9 @@
 
 \usepackage{helvet} % set all font to Helvetica
 \usepackage[italic]{mathastext}
-% 'isomath' sets upper case greek letters italic in accordance with the International Standard ISO 80000-2
+% 'isomath' sets upper case Greek letters italic in accordance with the International Standard ISO 80000-2
 \usepackage{isomath}
-\usepackage[T1]{fontenc} % load font family T1 (west-european codec)
+\usepackage[T1]{fontenc} % load font family T1 (west-European codec)
 
 % IMAGE DISPLAY
 \usepackage%[draft] % plot graphics in draft mode to save compilation time
@@ -27,10 +27,10 @@
 % \usepackage[nottoc,numbib]{tocbibind}
 
 % ADDITIONAL PACKAGES
-\usepackage{subfiles} % to include chapters as subfiles
+\usepackage{subfiles} % to include chapters as sub files
 \usepackage{amsmath} % for additional equation options, align etc.
 \usepackage{amssymb} %  additional math symbols, also loads amsfonts
-\usepackage{pdfpages} % to include pdf files with includepdf
+\usepackage{pdfpages} % to include PDF files with includepdf
 \usepackage{scrhack}
 \usepackage{caption} % for proper image captions
    \captionsetup{format=hang}
@@ -47,7 +47,8 @@
             linkcolor=black,
             urlcolor=black,
             filecolor=black,
-            menucolor=black]{hyperref} %bookmarks in black, clickable in PDF
+            menucolor=black]{hyperref} %bookmarks in black, click-able in PDF
 \usepackage{titling} % for abstract
+\usepackage{braket}
 %\usepackage{bbold} 
 %\usepackage{appendix}
