Add chapter for greens function

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -8,5 +8,6 @@
 \newcommand{\refeq}[1]{\ensuremath{\mathrm{Eq.}\,(\ref{#1})}}
 \newcommand{\refsec}[1]{\ensuremath{\mathrm{Sec.}\,\ref{#1}}}
 \newcommand{\reffig}[1]{\ensuremath{\mathrm{Fig.}\,\ref{#1}}}
+\newcommand{\refapp}[1]{\ensuremath{\mathrm{App.}\,(\ref{#1})}}
 \newcommand{\unit}[1]{\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
