Extend SAS theory chapter

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -17,6 +17,16 @@ number = 2,
 pages = {1287-1294},
 doi = {10.1063/1.1333034},
 }
+@article{Sears_1992_Neutr,
+author = {Varley F. Sears},
+title = {Neutron scattering lengths and cross sections},
+journal = {Neutron News},
+year = 1992,
+volume = 3,
+number = 3,
+pages = {26-37},
+doi = {10.1080/10448639208218770},
+}
 @article{Varon_2013_Dipol,
 author = {M. Varon and M. Beleggia and T. Kasama and R. J. Harrison and R. E. Dunin-Borkowski and V. F. Puntes and C. Frandsen},
 title = {Dipolar Magnetism in Ordered and Disordered Low-Dimensional Nanoparticle Assemblies},
