--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -11,3 +11,8 @@
 \newcommand{\refapp}[1]{\ensuremath{\mathrm{App.}\,(\ref{#1})}}
 \newcommand{\unit}[1]{\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
+\renewcommand{\sin}{\mathrm{sin}}
+\renewcommand{\cos}{\mathrm{cos}}
+\renewcommand{\exp}{\mathrm{exp}}
+\renewcommand{\tan}{\mathrm{tan}}
+\newcommand{\sinc}{\mathrm{sinc}}
