Add description about scattering theory of x-rays

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -37,3 +37,17 @@ number = 1234,
 pages = {1-5},
 doi = {10.1038/srep01234},
 }
+@book{AlsNielsen_2011_Eleme,
+	author       = {Jens Als-Nielsen and Des McMorrow},
+	title        = {Elements of Modern X-ray Physics},
+	publisher    = {John Wiley \& Sons, Inc.},
+	date         = {2011},
+  edition      = {2}
+}
+@book{Jackson_1999_Class,
+	author       = {John David Jackson},
+	title        = {Classical Electrodynamics},
+	publisher    = {John Wiley \& Sons, Inc.},
+	date         = {1999},
+  edition      = {3}
+}
