Written a paragraph about magnetic scattering

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -51,3 +51,9 @@ doi = {10.1038/srep01234},
 	date         = {1999},
   edition      = {3}
 }
+@book{Zhu_2005_Moder,
+	author       = {Yimei Zhu},
+	title        = {Modern Techniques for Characterizing Magnetic Materials},
+	publisher    = {Kluwer Academic Publishers},
+	date         = {2005}
+}
