Write section about coherence

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -13,6 +13,7 @@
 \newcommand{\etc}{\textit{etc}}
 \renewcommand{\sin}{\mathrm{sin}}
 \renewcommand{\cos}{\mathrm{cos}}
+\renewcommand{\cot}{\mathrm{cot}}
 \renewcommand{\exp}{\mathrm{exp}}
 \renewcommand{\tan}{\mathrm{tan}}
 \newcommand{\sinc}{\mathrm{sinc}}
