Add Wetterskog, Gubin

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -7,6 +7,15 @@ volume = 5,
 pages = {265-270},
 doi = {10.1038/nmat1611},
 }
+@article{Gubin_2005_Magne,
+author = {S. P. Gubin and Y. A. Koksharov and G. B. Khomutov and G. Y. Yurkov},
+title = {Magnetic nanoparticles: preparation, structure and properties},
+journal = {Russian Chemical Reviews},
+year = 2005,
+volume = 74,
+pages = {489-520},
+doi = {10.1070/RC2005v074n06ABEH000897},
+}
 @article{Russier_2001_Calcu,
 author = {V. Russier},
 title = {Calculated magnetic properties of two-dimensional arrays of nanoparticles at vanishing temperature},
@@ -26,6 +35,16 @@ volume = 3,
 number = 3,
 pages = {26-37},
 doi = {10.1080/10448639208218770},
+}
+@article{Wetterskog_2014_Preci,
+author = {Erik Wetterskog and Michael Agthe and Arnaud Mayence and Jekabs Grins and Dong Wang and Subhasis Rana and Anwar Ahniyaz and German Salazar-Alvarez and Lennart Bergstr\"om},
+title = {Precise control over shape and size of iron oxide nanocrystals suitable for assembly into ordered particle arrays},
+journal = {Sci. Technol. Adv. Matter},
+year = 2014,
+volume = 15,
+number = 055010,
+pages = {1-9},
+doi = {10.1088/1468-6996/15/5/055010},
 }
 @article{Varon_2013_Dipol,
 author = {M. Varon and M. Beleggia and T. Kasama and R. J. Harrison and R. E. Dunin-Borkowski and V. F. Puntes and C. Frandsen},
