--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -9,7 +9,7 @@
 \newcommand{\refsec}[1]{\ensuremath{\mathrm{Sec.}\,\ref{#1}}}
 \newcommand{\reffig}[1]{\ensuremath{\mathrm{Fig.}\,\ref{#1}}}
 \newcommand{\refapp}[1]{\ensuremath{\mathrm{App.}\,\ref{#1}}}
-\newcommand{\unit}[1]{\mathrm{#1}}
+\newcommand{\unit}[1]{\,\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
 \renewcommand{\sin}{\mathrm{sin}}
 \renewcommand{\cos}{\mathrm{cos}}
