Add alias for tab, log and mu

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -8,6 +8,7 @@
 \newcommand{\refeq}[1]{\ensuremath{\mathrm{Eq.}\,(\ref{#1})}}
 \newcommand{\refsec}[1]{\ensuremath{\mathrm{Sec.}\,\ref{#1}}}
 \newcommand{\reffig}[1]{\ensuremath{\mathrm{Fig.}\,\ref{#1}}}
+\newcommand{\reftab}[1]{\ensuremath{\mathrm{Tab.}\,\ref{#1}}}
 \newcommand{\refapp}[1]{\ensuremath{\mathrm{App.}\,\ref{#1}}}
 \newcommand{\unit}[1]{\,\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
@@ -15,5 +16,7 @@
 \renewcommand{\cos}{\mathrm{cos}}
 \renewcommand{\cot}{\mathrm{cot}}
 \renewcommand{\exp}{\mathrm{exp}}
+\renewcommand{\log}{\mathrm{log}}
 \renewcommand{\tan}{\mathrm{tan}}
 \newcommand{\sinc}{\mathrm{sinc}}
+\newcommand{\unitmu}{\,\text{\textmu m}}
