Add package for chem formula and to write mu sans serif

--- a/config/packages.tex
+++ b/config/packages.tex
@@ -1,6 +1,9 @@
 % FONT DISPLAY
 % \renewcommand{\familydefault}{\rmdefault}
 \renewcommand{\familydefault}{\sfdefault} % set all fonts except math to sans-serif (Computer Modern)
+% \usepackage{arev}
+\usepackage{textcomp}
+\usepackage{siunitx}
 
 \usepackage{helvet} % set all font to Helvetica
 \usepackage[italic]{mathastext}
@@ -12,6 +15,7 @@
 \usepackage%[draft] % plot graphics in draft mode to save compilation time
            {graphicx}
 \usepackage{float} % for better handling of floating objects, provides the H option
+
 
 % BIBLIOGRAPHY
 \usepackage[
@@ -50,5 +54,6 @@
             menucolor=black]{hyperref} %bookmarks in black, click-able in PDF
 \usepackage{titling} % for abstract
 \usepackage{braket}
-%\usepackage{bbold} 
+%\usepackage{bbold}
 %\usepackage{appendix}
+\usepackage{chemformula}
