Nanoparticles IOS-7 and IOS-11 parameters fixated

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -18,5 +18,6 @@
 \renewcommand{\exp}{\mathrm{exp}}
 \renewcommand{\log}{\mathrm{log}}
 \renewcommand{\tan}{\mathrm{tan}}
+\renewcommand{\coth}{\mathrm{coth}}
 \newcommand{\sinc}{\mathrm{sinc}}
 \newcommand{\unitmu}{\,\text{\textmu m}}
