Add derivation of langevin function

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -19,5 +19,7 @@
 \renewcommand{\log}{\mathrm{log}}
 \renewcommand{\tan}{\mathrm{tan}}
 \renewcommand{\coth}{\mathrm{coth}}
+\renewcommand{\sinh}{\mathrm{sinh}}
+\renewcommand{\cosh}{\mathrm{cosh}}
 \newcommand{\sinc}{\mathrm{sinc}}
 \newcommand{\unitmu}{\,\text{\textmu m}}
