Add a bit about looselyNP SEM images evaluation

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -36,6 +36,16 @@ number = 3,
 pages = {26-37},
 doi = {10.1080/10448639208218770},
 }
+@article{Torquato_2000_IsRan,
+author = {S. Torquato and T. M. Truskett and P. G. Debenedetti},
+title = {Is Random Close Packing of Spheres Well Defined?},
+journal = {Physical Review Letters},
+year = 2000,
+volume = 84,
+number = 10,
+pages = {2064-2067},
+doi = {10.1103/PhysRevLett.84.2064},
+}
 @article{Wetterskog_2014_Preci,
 author = {Erik Wetterskog and Michael Agthe and Arnaud Mayence and Jekabs Grins and Dong Wang and Subhasis Rana and Anwar Ahniyaz and German Salazar-Alvarez and Lennart Bergstr\"om},
 title = {Precise control over shape and size of iron oxide nanocrystals suitable for assembly into ordered particle arrays},
