Little change of working title

--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -7,10 +7,10 @@
 \includegraphics[width=4cm]{Universitaet_zu_Koeln-Siegel}
 % \HRule \\[0.4cm] % Horizontal line
 
-{\huge \bfseries Nanostructures of Magnetic Nanoparticles\par}
+{\huge \bfseries Towards Long Range Ordered Structures of Magnetic Nanoparticles\par}
 \vspace{0.4cm} % Thesis title
 % \HRule \\[1.5cm] % Horizontal line
- 
+
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \centering
@@ -22,7 +22,7 @@ Dominique Dresen
 \begin{flushright} \large
 \centering
 \textit{Supervisor}\\
-Dr. Sabrina Disch % Supervisor name - remove the \href bracket to remove the link  
+Dr. Sabrina Disch % Supervisor name - remove the \href bracket to remove the link
 \end{flushright}
 \end{minipage}\\[3cm]
 
@@ -31,10 +31,10 @@ Dr. Sabrina Disch % Supervisor name - remove the \href bracket to remove the lin
 \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of Dr. rer. nat.}\\[0.3cm]
 \textit{in the}\\[0.4cm]
 Workgroup Disch\\Department Chemie\\[2cm]
- 
+
 \vfill
 
-{\large February 2019} 
+{\large February 2019}
 \end{center}
 
 \end{titlepage}
