Introduce thermal decomposition in monolayer chapter

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -1,3 +1,12 @@
+@article{Bao_2009_Forma,
+author = {Ningzhong Bao and Liming Shen and Wei An and Prahallad Padhan and C. Heath Turner and Arunava Gupta},
+title = {Formation Mechanism and Shape Control of Monodisperse Magnetic \ch{CoFe2O4} Nanocrystals},
+journal = {Chemistry of Materials},
+year = 2009,
+volume = 21,
+pages = {3458-3468},
+doi = {10.1021/cm901033m},
+}
 @article{Bigioni_2006_Kinet,
 author = {Terry P. Bigioni and Xiao-Min Lin and Toan T. Nguyen and Eric I. Corwin and Thomas A. Witten and Heinrich M. Jaeger},
 title = {Kinetically driven self assembly of highly ordered nanoparticle monolayers},
@@ -7,6 +16,42 @@ volume = 5,
 pages = {265-270},
 doi = {10.1038/nmat1611},
 }
+@article{Bodnarchuk_2009_Excha,
+author = {Maryna I. Bodnarchuk and Maksym V. Kovalenko and Heiko Groiss and Roland Resel and Michael Reissner and G\"unter Hesser and Rainer T. Lechner and Walter Steiner and Friedrich Sch\"affler and Wolfgang Heiss},
+title = {Exchange-Coupled Bimagnetic W\"ustite/Metal Ferrite Core/Shell Nanocrystals: Size, Shape, and Compositional Control},
+journal = {small},
+year = 2009,
+volume = 5,
+pages = {2247-2252},
+doi = {10.1002/smll.200900635},
+}
+@article{Chen_2015_Synth,
+author = {Chih-Jung Chen and Ray-Kuang Chiang and Saeed Kamali and Sue-Lein Wang},
+title = {Synthesis and controllable oxidation of monodisperse cobalt-doped w\"ustite nanoparticles and their core-shell stability and exchange-bias stabilization},
+journal = {Nanoscale},
+year = 2015,
+volume = 7,
+pages = {14332-14343},
+doi = {10.1039/c5nr02969d},
+}
+@article{Embden_2015_TheHe,
+author = {Joel van Embden and Anthony S. R. Chesman and Jacek J. Jasieniak},
+title = {The Heat-Up Synthesis of Colloidal Nanocrystals},
+journal = {Chemistry of Materials},
+year = 2015,
+volume = 27,
+pages = {2246-2285},
+doi = {10.1021/cm5028964},
+}
+@article{Fried_2001_Order,
+author = {Tcipi Fried and Gabriel Shemer and Gil Markovich},
+title = {Ordered Two-Dimensional Arrays of Ferrite Nanoparticles},
+journal = {Advanced Materials},
+year = 2001,
+volume = 13,
+pages = {1158-1161},
+doi = {10.1002/1521-4095(200108)13:15<1158::AID-ADMA1158>3.0.CO;2-6},
+}
 @article{Gubin_2005_Magne,
 author = {S. P. Gubin and Y. A. Koksharov and G. B. Khomutov and G. Y. Yurkov},
 title = {Magnetic nanoparticles: preparation, structure and properties},
@@ -14,6 +59,23 @@ journal = {Russian Chemical Reviews},
 year = 2005,
 volume = 74,
 pages = {489-520},
+doi = {10.1070/RC2005v074n06ABEH000897},
+}
+@article{Hyeon_2003_Chemi,
+author = {Thaeghwan Hyeon},
+title = {Chemical synthesis of magnetic nanoparticles},
+journal = {ChemComm},
+year = 2003,
+pages = {927-934},
+doi = {10.1039/B207789B},
+}
+@article{Pillai_1996_Synth,
+author = {V. Pillai and D. O. Shah},
+title = {Synthesis of high-coercivity cobalt ferrite particles using water-in-oil microemulsions},
+journal = {Journal of Magnetism and Magnetic Materials},
+year = 1996,
+volume = 163,
+pages = {243-248},
 doi = {10.1070/RC2005v074n06ABEH000897},
 }
 @article{Russier_2001_Calcu,
@@ -36,6 +98,15 @@ number = 3,
 pages = {26-37},
 doi = {10.1080/10448639208218770},
 }
+@article{Sun_2002_SizeC,
+author = {Shouheng Sun and Hao Zeng},
+title = {Size-Controlled Synthesis of Magnetite Nanoparticles},
+journal = {JACS},
+year = 2002,
+volume = 124,
+pages = {8204-8205},
+doi = {10.1021/ja026501x},
+}
 @article{Torquato_2000_IsRan,
 author = {S. Torquato and T. M. Truskett and P. G. Debenedetti},
 title = {Is Random Close Packing of Spheres Well Defined?},
@@ -45,16 +116,6 @@ volume = 84,
 number = 10,
 pages = {2064-2067},
 doi = {10.1103/PhysRevLett.84.2064},
-}
-@article{Wetterskog_2014_Preci,
-author = {Erik Wetterskog and Michael Agthe and Arnaud Mayence and Jekabs Grins and Dong Wang and Subhasis Rana and Anwar Ahniyaz and German Salazar-Alvarez and Lennart Bergstr\"om},
-title = {Precise control over shape and size of iron oxide nanocrystals suitable for assembly into ordered particle arrays},
-journal = {Sci. Technol. Adv. Matter},
-year = 2014,
-volume = 15,
-number = 055010,
-pages = {1-9},
-doi = {10.1088/1468-6996/15/5/055010},
 }
 @article{Varon_2013_Dipol,
 author = {M. Varon and M. Beleggia and T. Kasama and R. J. Harrison and R. E. Dunin-Borkowski and V. F. Puntes and C. Frandsen},
@@ -66,12 +127,48 @@ number = 1234,
 pages = {1-5},
 doi = {10.1038/srep01234},
 }
+@article{Wetterskog_2014_Preci,
+author = {Erik Wetterskog and Michael Agthe and Arnaud Mayence and Jekabs Grins and Dong Wang and Subhasis Rana and Anwar Ahniyaz and German Salazar-Alvarez and Lennart Bergstr\"om},
+title = {Precise control over shape and size of iron oxide nanocrystals suitable for assembly into ordered particle arrays},
+journal = {Sci. Technol. Adv. Matter},
+year = 2014,
+volume = 15,
+number = 055010,
+pages = {1-9},
+doi = {10.1088/1468-6996/15/5/055010},
+}
+@article{Wetterskog_2013_Anoma,
+author = {Erik Wetterskog and Cheuk-Wai Tai and Jekabs Grins and Lennart Bergstr\"om and German Salazar-Alvarez},
+title = {Anomalous Magnetic Properties of Nanoparticles Arising from Defect Structures: Topotaxial Oxidation of Fe_{1-x}O|Fe_{3-\delta}O_4 Core|Shell Nanocubes to Single-Phase Particles},
+journal = {ACS Nano},
+year = 2013,
+volume = 7,
+number = 8,
+pages = {7132-7144},
+doi = {10.1021/nn402487q},
+}
+@article{Wu_2014_Monol,
+author = {Liheng Wu and Pierre-Olivier Jubert and David Berman and Wayne Imaino and Alshakim Nelson and Huiyuan Zhu and Sen Zhang and Shouheng Sun},
+title = {Monolayer Assembly of Ferrimagnetic Co_xFe_{3-x}O_4 Nanocubes for Magnetic Recording},
+journal = {Nano Letters},
+year = 2014,
+volume = 14,
+pages = {3395-3399},
+doi = {10.1021/nl500904a},
+}
 @book{AlsNielsen_2011_Eleme,
 	author       = {Jens Als-Nielsen and Des McMorrow},
 	title        = {Elements of Modern X-ray Physics},
 	publisher    = {John Wiley \& Sons, Inc.},
 	date         = {2011},
   edition      = {2}
+}
+@book{Niederberger_2009_Metal,
+	author       = {Markus Niederberger and Nicola Pinna},
+	title        = {Metal Oxide Nanoparticles in Organic Solvents},
+	publisher    = {Springer},
+	date         = {2009},
+  edition      = {1}
 }
 @book{Jackson_1999_Class,
 	author       = {John David Jackson},
