--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -7,11 +7,13 @@
 \newcommand{\angstrom}{\mbox{\normalfont\AA}}
 \newcommand{\refeq}[1]{\ensuremath{\mathrm{Eq.}\,(\ref{#1})}}
 \newcommand{\refsec}[1]{\ensuremath{\mathrm{Sec.}\,\ref{#1}}}
+\newcommand{\refch}[1]{\ensuremath{\mathrm{Ch.}\,\ref{#1}}}
 \newcommand{\reffig}[1]{\ensuremath{\mathrm{Fig.}\,\ref{#1}}}
 \newcommand{\reftab}[1]{\ensuremath{\mathrm{Tab.}\,\ref{#1}}}
 \newcommand{\refapp}[1]{\ensuremath{\mathrm{App.}\,\ref{#1}}}
 \newcommand{\unit}[1]{\,\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
+\newcommand{\etal}{\textit{et al.}\,}
 \renewcommand{\sin}{\mathrm{sin}}
 \renewcommand{\cos}{\mathrm{cos}}
 \renewcommand{\cot}{\mathrm{cot}}
