--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -69,6 +69,16 @@ year = 2003,
 pages = {927-934},
 doi = {10.1039/B207789B},
 }
+@article{Park_2004_Ultra,
+author = {Jongnam Park and Kwangjin An and Yosun Hwang and Je-Geun Park and Han-Jin Noh and
+Jae-Young Kim and Jae-Hoon Park and Nong-Moon Hwang and Taeghwan Hyeon},
+title = {Ultra-large-scale syntheses of monodisperse nanocrystals},
+journal = {Nature Materials},
+year = 2004,
+volume = 3,
+pages = {891-895},
+doi = {10.1038/nmat1251},
+}
 @article{Pillai_1996_Synth,
 author = {V. Pillai and D. O. Shah},
 title = {Synthesis of high-coercivity cobalt ferrite particles using water-in-oil microemulsions},
