Work on instruments and monolayers chapter

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -61,6 +61,14 @@ volume = 74,
 pages = {489-520},
 doi = {10.1070/RC2005v074n06ABEH000897},
 }
+@article{Heinz_2015_Maria,
+author = {Heinz Maier-Leibnitz Zentrum},
+title = {MARIA: Magnetic reflectometer with high incident angle},
+journal = {Journal of large-scale research facilities},
+year = 2015,
+pages = {1-4},
+doi = {10.17815/jlsrf-1-29},
+}
 @article{Hyeon_2003_Chemi,
 author = {Thaeghwan Hyeon},
 title = {Chemical synthesis of magnetic nanoparticles},
