--- a/config/packages.tex
+++ b/config/packages.tex
@@ -10,6 +10,7 @@
 % 'isomath' sets upper case Greek letters italic in accordance with the International Standard ISO 80000-2
 \usepackage{isomath}
 \usepackage[T1]{fontenc} % load font family T1 (west-European codec)
+\usepackage[utf8]{inputenc}
 
 % IMAGE DISPLAY
 \usepackage%[draft] % plot graphics in draft mode to save compilation time
@@ -22,11 +23,11 @@
     backend=biber,
     natbib=true,
     style=chem-angew,
-    sortlocale=en_US,
     doi=true,
     url=false,
     eprint=true,
     backref=true,
+    bibencoding=ascii
     ]{biblatex}
 % \usepackage[nottoc,numbib]{tocbibind}
 
