Updated instruments, resorted monolayer chapter structure

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -34,6 +34,24 @@ volume = 7,
 pages = {14332-14343},
 doi = {10.1039/c5nr02969d},
 }
+@article{Devishvili_2015_Super,
+author = {A. Devishvili and K. Zhernenkov and A. J. C. Dennison and B. P. Toperverg and M. Wolff and B. Hj\"orvarsson and H. Zabel},
+title = {SuperADAM: Upgraded polarized neutron reflectometer at the Institut Laue-Langevin},
+journal = {Review of Scientific Instruments},
+year = 2013,
+volume = 84,
+pages = {1-8},
+doi = {10.1063/1.4790717},
+}
+@article{Dewhurst_2015_Thesm,
+author = {C. D. Dewhurst and I. Grillo and D. Honecker and M. Bonnaud and M. Jacques and C. Amrouni and A. Perillo-Marcone and G. Manzin and R. Cubitt},
+title = {The small-angle neutron scattering instrument D33 at the Institut Laue-Langevin},
+journal = {Journal of Applied Crystallography},
+year = 2016,
+volume = 49,
+pages = {1-14},
+doi = {10.1107/S1600576715021792},
+}
 @article{Embden_2015_TheHe,
 author = {Joel van Embden and Anthony S. R. Chesman and Jacek J. Jasieniak},
 title = {The Heat-Up Synthesis of Colloidal Nanocrystals},
@@ -42,6 +60,14 @@ year = 2015,
 volume = 27,
 pages = {2246-2285},
 doi = {10.1021/cm5028964},
+}
+@article{FZJ_2016_GALAX,
+author = {Forschungszentrum J\"ulich},
+title = {GALAXI: Gallium anode low-angle x-ray instrument},
+journal = {Journal of large-scale research facilities},
+year = 2016,
+volume = 2,
+doi = {10.17815/jlsrf-2-109},
 }
 @article{Fried_2001_Order,
 author = {Tcipi Fried and Gabriel Shemer and Gil Markovich},
@@ -96,6 +122,15 @@ volume = 163,
 pages = {243-248},
 doi = {10.1070/RC2005v074n06ABEH000897},
 }
+@article{Renaud_2009_Probi,
+author = {Gilles Renaud, Rémi Lazzari, Frédéric Leroy},
+title = {Probing surface and interface morphology with Grazing Incidence Small Angle X-Ray Scattering},
+journal = {Surface Science Reports},
+year = 2009,
+volume = 64,
+pages = {255-380},
+doi = {10.1016/j.surfrep.2009.07.002},
+}
 @article{Russier_2001_Calcu,
 author = {V. Russier},
 title = {Calculated magnetic properties of two-dimensional arrays of nanoparticles at vanishing temperature},
@@ -105,6 +140,15 @@ volume = 89,
 number = 2,
 pages = {1287-1294},
 doi = {10.1063/1.1333034},
+}
+@article{Saerbeck_2018_Recen,
+author = {Thomas Saerbeck and Robert Cubitt and Andrew Wildes and Giuliana Manzin and Ken H. Andersen and Philipp Gutfreund},
+title = {Recent upgrades of the neutron reflectometer D17 at ILL},
+journal = {Journal of Applied Crystallography},
+year = 2018,
+volume = 51,
+pages = {249-256},
+doi = {10.1107/S160057671800239X},
 }
 @article{Sears_1992_Neutr,
 author = {Varley F. Sears},
