--- a/config/packages.tex
+++ b/config/packages.tex
@@ -26,8 +26,7 @@
     doi=true,
     url=false,
     eprint=true,
-    backref=true,
-    bibencoding=ascii
+    backref=true
     ]{biblatex}
 % \usepackage[nottoc,numbib]{tocbibind}
 
