Update monolayer preparation chapter

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -179,6 +179,15 @@ number = 10,
 pages = {2064-2067},
 doi = {10.1103/PhysRevLett.84.2064},
 }
+@article{Tuckermann_2002_Evapo,
+author = {Rudolf Tuckermann and Sigurd Bauerecker and Bernd Neidhart},
+title = {Evaporation rates of alkanes and alkanols from acoustically levitated drops},
+journal = {Anal. Bioanal. Chem.},
+year = 2002,
+volume = 372,
+pages = {122-127},
+doi = {10.1007/s00216-001-1132-7},
+}
 @article{Varon_2013_Dipol,
 author = {M. Varon and M. Beleggia and T. Kasama and R. J. Harrison and R. E. Dunin-Borkowski and V. F. Puntes and C. Frandsen},
 title = {Dipolar Magnetism in Ordered and Disordered Low-Dimensional Nanoparticle Assemblies},
