--- a/config/packages.tex
+++ b/config/packages.tex
@@ -16,7 +16,7 @@
 \usepackage%[draft] % plot graphics in draft mode to save compilation time
            {graphicx}
 \usepackage{float} % for better handling of floating objects, provides the H option
-
+\usepackage{placeins} % for FloatBarrier
 
 % BIBLIOGRAPHY
 \usepackage[
