Start writing about micromagnetic simulation

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -25,6 +25,15 @@ volume = 5,
 pages = {2247-2252},
 doi = {10.1002/smll.200900635},
 }
+@article{Box_1957_Anoteo,
+author = {G. E. P. Box and Mervin E. Mueller},
+title = {A note on the generation of random normal deviates},
+journal = {Ann. Math. Statist.},
+year = 1958,
+volume = 29,
+pages = {610-611},
+doi = {10.1214/aoms/1177706645},
+}
 @article{Chen_2015_Synth,
 author = {Chih-Jung Chen and Ray-Kuang Chiang and Saeed Kamali and Sue-Lein Wang},
 title = {Synthesis and controllable oxidation of monodisperse cobalt-doped w\"ustite nanoparticles and their core-shell stability and exchange-bias stabilization},
@@ -77,6 +86,16 @@ year = 2001,
 volume = 13,
 pages = {1158-1161},
 doi = {10.1002/1521-4095(200108)13:15<1158::AID-ADMA1158>3.0.CO;2-6},
+}
+@article{Garcia_1998_Lange,
+author = {José Luis García-Palacios and Francisco J. Lázaro},
+title = {Langevin-dynamics study of the dynamical properties of small magnetic particles},
+journal = {Physical Review B},
+year = 1998,
+volume = 58,
+number = 22,
+pages = {14937-14958},
+doi = {10.1103/PhysRevB.58.14937},
 }
 @article{Gubin_2005_Magne,
 author = {S. P. Gubin and Y. A. Koksharov and G. B. Khomutov and G. Y. Yurkov},
@@ -234,6 +253,12 @@ doi = {10.1021/nl500904a},
 	date         = {2011},
   edition      = {2}
 }
+@book{Blundell_2001_Magne,
+	author       = {Stephen Blundell},
+	title        = {Magnetism in Condensed Matter},
+	publisher    = {Oxford University Press},
+	date         = {2001}
+}
 @book{Niederberger_2009_Metal,
 	author       = {Markus Niederberger and Nicola Pinna},
 	title        = {Metal Oxide Nanoparticles in Organic Solvents},
@@ -247,6 +272,12 @@ doi = {10.1021/nl500904a},
 	publisher    = {John Wiley \& Sons, Inc.},
 	date         = {1999},
   edition      = {3}
+}
+@book{Sueli_2003_Anint,
+	author       = {Endre S\"uli and David F. Mayers},
+	title        = {An Introduction to Numerical Analysis},
+	publisher    = {Cambridge University Press},
+	date         = {2003}
 }
 @book{Zhu_2005_Moder,
 	author       = {Yimei Zhu},
