Slight change to working title

--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -7,7 +7,7 @@
 \includegraphics[width=4cm]{Universitaet_zu_Koeln-Siegel}
 % \HRule \\[0.4cm] % Horizontal line
 
-{\huge \bfseries Towards Long Range Ordered Structures of Magnetic Nanoparticles\par}
+{\huge \bfseries Long Range Order Structures of Magnetic Nanoparticles\par}
 \vspace{0.4cm} % Thesis title
 % \HRule \\[1.5cm] % Horizontal line
 
