Add glossary module

--- a/config/packages.tex
+++ b/config/packages.tex
@@ -54,6 +54,8 @@
             menucolor=black]{hyperref} %bookmarks in black, click-able in PDF
 \usepackage{titling} % for abstract
 \usepackage{braket}
+\usepackage[toc]{glossaries}
+
 %\usepackage{bbold}
 %\usepackage{appendix}
 \usepackage{chemformula}
