Add literature sources

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -122,6 +122,23 @@ year = 2003,
 pages = {927-934},
 doi = {10.1039/B207789B},
 }
+@article{Jung_2005_CoFe2,
+author = {J.-S. Jung and J.-H. Lim},
+title = {CoFe_2O_4 nanostructures with high coercivity},
+journal = {Journal of Applied Physics},
+year = 2005,
+pages = {10F306},
+doi = {10.1063/1.1852851},
+}
+@article{Muscas_2015_Evolu,
+author = {G. Muscas and N. Yaacoub and G. Concas and F. Sayed and R. Sayed Hassan and J.M. Greneche and C. Cannas and A. Musinu and V. Foglietti and S. Casciardi and C. Sangregoria and D. Peddis},
+title = {Evolution of the magnetic structure with chemical composition in spinel iron oxide nanoparticles},
+journal = {Nanoscale},
+year = 2015,
+volume = 7,
+pages = {13576-13585},
+doi = {10.1039/c5nr02723c},
+}
 @article{Park_2004_Ultra,
 author = {Jongnam Park and Kwangjin An and Yosun Hwang and Je-Geun Park and Han-Jin Noh and
 Jae-Young Kim and Jae-Hoon Park and Nong-Moon Hwang and Taeghwan Hyeon},
@@ -132,6 +149,15 @@ volume = 3,
 pages = {891-895},
 doi = {10.1038/nmat1251},
 }
+@article{Peddis_2008_Spinc,
+author = {D. Peddis and M. V. Mansilla and S. Morup and C. Cannas and A. Musinu and G. Piccaluga and F. D'Orazio and F. Lucari and D. Fiorani},
+title = {Spin-Canting and Magnetic Anisotropy in Ultrasmall CoFe_2O_4 Nanoparticles},
+journal = {J. Phys. Chem. B},
+year = 2008,
+volume = 112,
+pages = {8507-8513},
+doi = {10.1021/jp8016634},
+}
 @article{Pillai_1996_Synth,
 author = {V. Pillai and D. O. Shah},
 title = {Synthesis of high-coercivity cobalt ferrite particles using water-in-oil microemulsions},
@@ -141,6 +167,15 @@ volume = 163,
 pages = {243-248},
 doi = {10.1070/RC2005v074n06ABEH000897},
 }
+@article{Ramos_2007_Roomt,
+author = {A. V. Ramos and M.-J. Guittet and J.-B. Moussy and R. Mattana and C. Deranlot and F. Petroff and C. Gatel},
+title = {Room temperature spin filtering in epitaxial cobalt-ferrite tunnel barriers},
+journal = {Applied Physics Letters},
+year = 2007,
+volume = 91,
+pages = {122107},
+doi = {10.1063/1.2787880},
+}
 @article{Renaud_2009_Probi,
 author = {Gilles Renaud, Rémi Lazzari, Frédéric Leroy},
 title = {Probing surface and interface morphology with Grazing Incidence Small Angle X-Ray Scattering},
@@ -149,6 +184,15 @@ year = 2009,
 volume = 64,
 pages = {255-380},
 doi = {10.1016/j.surfrep.2009.07.002},
+}
+@article{Repko_2015_Oleate,
+author = {Anton Repko and Jana Vejpravová and Tat'ana Vacková and Dominika Zákutná and Daniel Niznanský},
+title = {Oleate-based hydrothermal preparation of CoFe_2O_4 nanoparticles, and their magnetic properties with respect to particle size and surface coating},
+journal = {Journal of Magnetism and Magnetic Materials},
+year = 2015,
+volume = 390,
+pages = {142-151},
+doi = {10.1016/j.jmmm.2015.04.090},
 }
 @article{Russier_2001_Calcu,
 author = {V. Russier},
@@ -169,6 +213,24 @@ volume = 51,
 pages = {249-256},
 doi = {10.1107/S160057671800239X},
 }
+@article{Sawatzky_1968_Catio,
+author = {G. A. Sawatzky and F. van der Woude and A. H. Morrish},
+title = {Cation Distributions in Octahedral and Tetrahedral Sites of the Ferrimagnetic Spinel CoFe_2O_4},
+journal = {Journal of Applied Physics},
+year = 1968,
+volume = 39,
+pages = {1204-1206},
+doi = {10.1063/1.1656224},
+}
+@article{Sawatzky_1969_Mossb,
+author = {G. A. Sawatzky and F. van der Woude and A. H. Morrish},
+title = {M\"ossbauer Study of Several Ferrimagnetic Spinels},
+journal = {Physical Review},
+year = 1969,
+volume = 187,
+pages = {747-757},
+doi = {10.1103/PhysRev.187.747},
+}
 @article{Sears_1992_Neutr,
 author = {Varley F. Sears},
 title = {Neutron scattering lengths and cross sections},
@@ -179,6 +241,34 @@ number = 3,
 pages = {26-37},
 doi = {10.1080/10448639208218770},
 }
+@article{Shenker_1957_Magne,
+author = {Henry Shenker},
+title = {Magnetic Anisotropy of Cobalt Ferrite (Co_{1.01}Fe_{2.00}O_{3.62}) and Nickel Cobalt Ferrite (Ni_{0.72}Fe_{0.2}Co_{0.08}Fe_2O_4)},
+journal = {Physical Review},
+year = 1957,
+volume = 107,
+number = 5,
+pages = {1246-1249},
+doi = {10.1103/PhysRev.107.1246},
+}
+@article{Sickafus_1999_Struc,
+author = {Kurt E. Sickafus and John M. Wills},
+title = {Structure of Spinel},
+journal = {J. Am. Ceram. Soc.},
+year = 1999,
+volume = 82,
+pages = {3279-3292},
+doi = {10.1111/j.1151-2916.1999.tb02241.x},
+}
+@article{Slonczewski_1958_Origi,
+author = {J. C. Slonczewski},
+title = {Origin of Magnetic Anisotropy in Cobalt-Substituted Magnetite},
+journal = {Physical Review},
+year = 1958,
+volume = 110,
+pages = {1341-1348},
+doi = {10.1103/PhysRev.110.1341},
+}
 @article{Sun_2002_SizeC,
 author = {Shouheng Sun and Hao Zeng},
 title = {Size-Controlled Synthesis of Magnetite Nanoparticles},
@@ -187,6 +277,15 @@ year = 2002,
 volume = 124,
 pages = {8204-8205},
 doi = {10.1021/ja026501x},
+}
+@article{Tachiki_1960_Origi,
+author = {Masashi Tachiki},
+title = {Origin of the Magnetic Anisotropy Energy of Cobalt Ferrite},
+journal = {Progress of Theoretical Physics},
+year = 1960,
+volume = 23,
+pages = {1055-1071},
+doi = {10.1143/PTP.23.1055},
 }
 @article{Torquato_2000_IsRan,
 author = {S. Torquato and T. M. Truskett and P. G. Debenedetti},
@@ -258,6 +357,12 @@ doi = {10.1021/nl500904a},
 	title        = {Magnetism in Condensed Matter},
 	publisher    = {Oxford University Press},
 	date         = {2001}
+}
+@book{Goldman_1999_Cryst,
+	author       = {Alex Goldman},
+	title        = {Handbook of Modern Ferromagnetic Materials},
+	publisher    = {Springer Science+Business Media, LLC},
+	date         = {1999}
 }
 @book{Niederberger_2009_Metal,
 	author       = {Markus Niederberger and Nicola Pinna},
