Group appendix bookmakers

--- a/config/packages.tex
+++ b/config/packages.tex
@@ -57,5 +57,7 @@
 \usepackage[toc]{glossaries}
 
 %\usepackage{bbold}
-%\usepackage{appendix}
+\usepackage[toc,page]{appendix}
 \usepackage{chemformula}
+\usepackage{bookmark}
+\bookmarksetup{numbered}
