--- a/dresen_thesis.tex
+++ b/dresen_thesis.tex
@@ -45,13 +45,14 @@
 \subfile{\main/chapters/colloidalCrystals/colloidalCrystals}
 \subfile{\main/chapters/summary/summary}
 
-\subfile{\main/chapters/appendix/appendix}
+\bookmarksetupnext{level=part}
+\begin{appendices}
+  \subfile{\main/chapters/appendix/appendix}
+\end{appendices}
 \listoffigures
 
 \listoftables
 
-% \bibliographystyle{plain}
-% \bibliography{literature}
 \glsaddall
 \printglossary[nonumberlist]
 \printbibliography
