--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -1,3 +1,12 @@
+@article{Aoyama_2012_Tenth,
+author = {Tatsumi Aoyama and Masashi Hayakawa and Toichiro Kinoshita and Makiko Nio},
+title = {Tenth-Order QED Contribution to the Electron g-2 and an Improved Value of the Fine Structure Constant},
+journal = {Physical Review Letters},
+year = 2012,
+volume = 109,
+pages = {111807},
+doi = {10.1103/PhysRevLett.109.111807},
+}
 @article{Bao_2009_Forma,
 author = {Ningzhong Bao and Liming Shen and Wei An and Prahallad Padhan and C. Heath Turner and Arunava Gupta},
 title = {Formation Mechanism and Shape Control of Monodisperse Magnetic \ch{CoFe2O4} Nanocrystals},
@@ -105,6 +114,15 @@ year = 2005,
 volume = 74,
 pages = {489-520},
 doi = {10.1070/RC2005v074n06ABEH000897},
+}
+@article{Hanneke_2011_Cavit,
+author = {D. Hanneke and S. Fogwell Hoogerheide and G. Gabrielse},
+title = {Cavity control of a single-electron quantum cyclotron: Measuring the electron magnetic moment},
+journal = {Physical Review A},
+year = 2011,
+volume = 83,
+pages = {052122},
+doi = {10.1103/PhysRevA.83.052122},
 }
 @article{Heinz_2015_Maria,
 author = {Heinz Maier-Leibnitz Zentrum},
@@ -357,6 +375,12 @@ doi = {10.1021/nl500904a},
 	title        = {Magnetism in Condensed Matter},
 	publisher    = {Oxford University Press},
 	date         = {2001}
+}
+@book{Coey_2010_Magne,
+	author       = {J. M. D. Coey},
+	title        = {Magnetism and Magnetic Materials},
+	publisher    = {Cambridge University Press},
+	date         = {2010}
 }
 @book{Goldman_1999_Cryst,
 	author       = {Alex Goldman},
