--- a/components/glossary/glossary.tex
+++ b/components/glossary/glossary.tex
@@ -1,9 +1,4 @@
-\newglossaryentry{fn}{%
-  name={\ensuremath{F_n}},
-  description={Empirical (sample) distribution function}
-}
-
-\newglossaryentry{fncon}{%
-  name={\ensuremath{F^{n^\ast}}},
-  description={$n$-fold convolution of the distribution function/distribution $F$}
+\newglossaryentry{vector}{%
+  name={\ensuremath{\vec{a} ,\, a ,\, \hat{a}}},
+  description={Notation for a three dim. vector \ensuremath{\vec{a}}, it's magnitude \ensuremath{a} and direction with magnitude 1 such that \ensuremath{\hat{a} = \vec{a}/a}}
 }
