--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -7,6 +7,15 @@ volume = 109,
 pages = {111807},
 doi = {10.1103/PhysRevLett.109.111807},
 }
+@article{Atxitia_2017_Funda,
+author = {U. Atxitia and D. Hinzke and U. Nowak},
+title = {Fundamentals and applications of the Landau-Lifshitz-Bloch equation},
+journal = {J. Phys. D: Appl. Phys.},
+year = 2017,
+volume = 50,
+pages = {033003},
+doi = {10.1088/1361-6463/50/3/033003},
+}
 @article{Bao_2009_Forma,
 author = {Ningzhong Bao and Liming Shen and Wei An and Prahallad Padhan and C. Heath Turner and Arunava Gupta},
 title = {Formation Mechanism and Shape Control of Monodisperse Magnetic \ch{CoFe2O4} Nanocrystals},
@@ -78,6 +87,23 @@ year = 2015,
 volume = 27,
 pages = {2246-2285},
 doi = {10.1021/cm5028964},
+}
+@article{Evans_2012_Stoch,
+author = {R. F. L. Evans and D. Hinzke and U. Atxitia and U. Nowak and R. W. Chantrell and O. Chubykalo-Fesenko},
+title = {Stochastic form of the Landau-Lifshitz-Bloch equation},
+journal = {Physical Review B},
+year = 2012,
+volume = 85,
+pages = {014433},
+doi = {10.1103/PhysRevB.85.014433},
+}
+@article{Fidler_2000_Micro,
+author = {Josef Fidler and Thomas Schrefl},
+title = {Micromagnetic modelling - the current state of the art},
+journal = {J. Phys. D: Appl. Phys.},
+year = 2000,
+volume = 33,
+doi = {10.1088/0022-3727/33/15/201},
 }
 @article{FZJ_2016_GALAX,
 author = {Forschungszentrum J\"ulich},
@@ -167,6 +193,15 @@ volume = 3,
 pages = {891-895},
 doi = {10.1038/nmat1251},
 }
+@article{Parkinson_2016_Irono,
+author = {Gareth S. Parkinson},
+title = {Iron oxide surfaces},
+journal = {Surface Science Reports},
+year = 2016,
+volume = 71,
+pages = {272-365},
+doi = {10.1016/j.surfrep.2016.02.001},
+}
 @article{Peddis_2008_Spinc,
 author = {D. Peddis and M. V. Mansilla and S. Morup and C. Cannas and A. Musinu and G. Piccaluga and F. D'Orazio and F. Lucari and D. Fiorani},
 title = {Spin-Canting and Magnetic Anisotropy in Ultrasmall CoFe_2O_4 Nanoparticles},
@@ -184,6 +219,15 @@ year = 1996,
 volume = 163,
 pages = {243-248},
 doi = {10.1070/RC2005v074n06ABEH000897},
+}
+@article{Politi_2002_Dipol,
+author = {Paolo Politi and Maria Gloria Pini},
+title = {Dipolar interaction between two-dimensional magnetic particles},
+journal = {Physical Review B},
+year = 2002,
+volume = 66,
+pages = {214414},
+doi = {10.1103/PhysRevB.66.214414},
 }
 @article{Ramos_2007_Roomt,
 author = {A. V. Ramos and M.-J. Guittet and J.-B. Moussy and R. Mattana and C. Deranlot and F. Petroff and C. Gatel},
@@ -382,6 +426,12 @@ doi = {10.1021/nl500904a},
 	publisher    = {Cambridge University Press},
 	date         = {2010}
 }
+@book{Einstein_1956_Inves,
+	author       = {Albert Einstein},
+	title        = {Investigations on the Theory of the Brownian Movement},
+	publisher    = {Dover},
+	date         = {1956}
+}
 @book{Goldman_1999_Cryst,
 	author       = {Alex Goldman},
 	title        = {Handbook of Modern Ferromagnetic Materials},
@@ -413,4 +463,11 @@ doi = {10.1021/nl500904a},
 	title        = {Modern Techniques for Characterizing Magnetic Materials},
 	publisher    = {Kluwer Academic Publishers},
 	date         = {2005}
+}
+@thesis{Scholz_1999_Micro,
+	author = {Werner Scholz},
+	title = {Micromagnetic Simulation of Thermally Activated Switching in Fine Particles},
+	type = {Diploma Thesis},
+	institution = {TU Wien},
+	year = {1999}
 }
